--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>Alişveriş Sepeti</h1>
             <div class="shopping">
-                <img src="images/download.jpg">
+                <img src="images/download.jpg" alt="png">
                 <span class="quantity">0</span>
             </div>
         </header>
